wishAddLoginPlp alignment issue is fixed in plp

--- a/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-luxury/sass/site/pages/_plp.scss
+++ b/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-luxury/sass/site/pages/_plp.scss
@@ -1,4 +1,7 @@
 .wishAddLoginPlp, .wishAddSucessPlp, .wishAlreadyAddedPlp, .wishRemoveSucessPlp{
+    display: none;
+}
+.wishAddLoginPlp, .wishAddSucessPlp, .wishAlreadyAddedPlp, .wishRemoveSucessPlp{
     display: inline-block;
     position: fixed;
    	z-index: 100000;
@@ -65,6 +68,7 @@
 .wishAddSucessPlp.active, .wishAlreadyAddedPlp.active, .wishRemoveSucessPlp.active{
 	opacity: 1;
 	top: 90px;
+    display: block;
 }
 .plp-banner{
 	padding:0px;
